# CLPlayer

./: CMakeLists.txt
3rdpart/ffmpeg/include/libavutil/: ffversion.h
3rdpart/ffmpeg/lib/: libavcodec.dylib  libavdevice.dylib  libavfilter.8.dylib  libavformat.59.37.100.dylib  libavformat.59.dylib  libavutil.57.dylib  libswresample.4.9.100.dylib  libswscale.dylib
3rdpart/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
CLAV/: CLAV.h  CLAVReader.cpp  CMakeLists.txt
CLAVE/: CLAV.h  CLAVPacket.cpp  CMakeLists.txt
CLPlayer/: CMakeLists.txt  main.cpp
CLThread/: CMakeLists.txt  MyThread.cpp  MyThread.h
